constants module for frame rates etc.

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "(977, 977)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,30 +165,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "vis-data-256/vis-data-256/2015-03-25-00-54-04_mic.mp4",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\ysjan\\OneDrive - Harvard University\\MIT6-8300_Computer_Vision\\project\\Visually-Indicated-Sounds\\main.ipynb Cell 9\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ysjan/OneDrive%20-%20Harvard%20University/MIT6-8300_Computer_Vision/project/Visually-Indicated-Sounds/main.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dataset \u001b[39m=\u001b[39m VideoAudioDataset(train_dataset, device)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ysjan/OneDrive%20-%20Harvard%20University/MIT6-8300_Computer_Vision/project/Visually-Indicated-Sounds/main.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dataset[\u001b[39m0\u001b[39;49m][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mshape, dataset[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mshape\n",
-      "File \u001b[1;32mc:\\Users\\ysjan\\OneDrive - Harvard University\\MIT6-8300_Computer_Vision\\project\\Visually-Indicated-Sounds\\dataloader.py:34\u001b[0m, in \u001b[0;36mVideoAudioDataset.__getitem__\u001b[1;34m(self, idx)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[39m# Load video\u001b[39;00m\n\u001b[0;32m     33\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(video_path):\n\u001b[1;32m---> 34\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(video_path)\n\u001b[0;32m     35\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(audio_path):\n\u001b[0;32m     36\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(audio_path) \n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: vis-data-256/vis-data-256/2015-03-25-00-54-04_mic.mp4"
-     ]
+     "data": {
+      "text/plain": [
+       "(torch.Size([631, 3, 256, 456]), torch.Size([2112000, 2]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset = VideoAudioDataset(train_dataset, device, filepath_prefix=filepath)\n",
-    "dataset[0][0].shape, dataset[0][1].shape"
+    "dataset[2][0].shape, dataset[2][1].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +195,7 @@
        "(torch.Size([149, 3, 256, 456]), torch.Size([480000, 2]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +203,7 @@
    "source": [
     "# get a random segment of 5 seconds - keep the same time length for video and audio\n",
     "dataset = VideoAudioDataset(train_dataset, device, filepath_prefix=filepath, transform=get_random_segment)\n",
-    "dataset[0][0].shape, dataset[0][1].shape"
+    "dataset[2][0].shape, dataset[2][1].shape"
    ]
   },
   {
@@ -277,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
