--- a/model1.ipynb
+++ b/model1.ipynb
@@ -22,7 +22,7 @@
     "from torch.utils.data.sampler import SubsetRandomSampler\n",
     "\n",
     "# import Dataset from dataloader.py\n",
-    "from dataloader import VideoAudioDataset, get_random_segment\n",
+    "from dataloader import VideoAudioDataset, VATransform, ResamplingSampler\n",
     "\n",
     "# !! Put data file location in file `data_filepath`\n",
     "# If file `data_filepath` does not exist, assume data is located in root\n",
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "train_dataset = np.load('datasets/train_dataset.npy')\n",
-    "dataset = VideoAudioDataset(train_dataset, device, filepath_prefix=filepath, transform=get_random_segment)"
+    "# dataset = VideoAudioDataset(train_dataset, device, filepath_prefix=filepath, transform=get_random_segment)"
    ]
   },
   {
@@ -168,9 +168,14 @@
     "val_dataset = np.load('datasets/val_dataset.npy')\n",
     "test_dataset = np.load('datasets/test_dataset.npy')\n",
     "\n",
-    "train_dataset_cls = VideoAudioDataset(train_dataset, device, filepath_prefix=filepath, transform=get_random_segment, downsample_factor=5)\n",
-    "val_dataset_cls = VideoAudioDataset(val_dataset, device, filepath_prefix=filepath, transform=get_random_segment, downsample_factor=5)\n",
-    "test_dataset_cls = VideoAudioDataset(test_dataset, device, filepath_prefix=filepath, transform=get_random_segment, downsample_factor=5)\n",
+    "transforms = [VATransform.RANDOM_SEGMENT, \n",
+    "              VATransform.IMG_DOWNSAMPLE]\n",
+    "\n",
+    "transform_args = {'img_downsample_factor': 5}\n",
+    "\n",
+    "train_dataset_cls = VideoAudioDataset(train_dataset, device, filepath_prefix=filepath, transform=transforms)\n",
+    "val_dataset_cls = VideoAudioDataset(val_dataset, device, filepath_prefix=filepath, transform=transforms)\n",
+    "test_dataset_cls = VideoAudioDataset(test_dataset, device, filepath_prefix=filepath, transform=transforms)\n",
     "\n",
     "train_dataloader = DataLoader(train_dataset_cls, batch_size=4, shuffle=True)\n",
     "val_dataloader = DataLoader(val_dataset_cls, batch_size=4, shuffle=False)\n",
